--- a/LastBoundary/MainWindow.xaml
+++ b/LastBoundary/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vlc="clr-namespace:Vlc.DotNet.Wpf;assembly=Vlc.DotNet.Wpf"
-        Title="MainWindow" Height="700" Width="1080"
+        Title="ÜberTV" Height="700" Width="1080"
         MinHeight="605" MinWidth="1000"
         Closing="Window_Closing">
 
@@ -127,15 +127,15 @@
             <Button x:Name="btnOn" Grid.Column="1" Style="{DynamicResource RoundCorner}" Width="40" Height="40" Grid.Row="2" Click="btnOn_Click">
                 <Image Source="/img/onoff.png" Margin="3"/>
             </Button>
-            <Rectangle Fill="AntiqueWhite" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Margin="1" />
-            <Image x:Name="btnImgSettings" Grid.Column="2" Grid.Row="0" Width="20" Source="/img/settings.png" HorizontalAlignment="Right" Margin="3" PreviewMouseLeftButtonDown="btnImgSettings_PreviewMouseLeftButtonDown">
+            <Rectangle Fill="LightGray" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Margin="1" />
+            <Image x:Name="btnImgSettings" Grid.Column="2" Grid.Row="0" Width="25" Source="/img/settings.png" HorizontalAlignment="Right" Margin="5" PreviewMouseLeftButtonDown="btnImgSettings_PreviewMouseLeftButtonDown">
                 <Image.Style>
                     <Style TargetType="{x:Type Image}">
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter Property="Effect">
                                     <Setter.Value>
-                                        <DropShadowEffect ShadowDepth="2" Color="#FF555555" Opacity="0.2" BlurRadius="5"/>
+                                        <DropShadowEffect ShadowDepth="2" Color="#FF555555" Opacity="0.5" BlurRadius="10"/>
                                     </Setter.Value>
                                 </Setter>
                             </Trigger>
@@ -185,9 +185,12 @@
         <Grid Grid.Column="0" Grid.Row="1" Panel.ZIndex="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="45"/>
-                <ColumnDefinition Width="1.5*"/>
+                <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="100"/>
             </Grid.ColumnDefinitions>
             <Image x:Name="imgSoundToolBar" Source="/img/sound.png" Width="30" Grid.Column="0" HorizontalAlignment="Center" PreviewMouseLeftButtonDown="imgSoundToolBar_PreviewMouseLeftButtonDown">
                 <Image.Style>
@@ -196,7 +199,7 @@
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter Property="Effect">
                                     <Setter.Value>
-                                        <DropShadowEffect ShadowDepth="2" Color="Black" Opacity="0.2" BlurRadius="7"/>
+                                        <DropShadowEffect ShadowDepth="2" Color="Black" Opacity="0.5" BlurRadius="7"/>
                                     </Setter.Value>
                                 </Setter>
                             </Trigger>
@@ -205,6 +208,13 @@
                 </Image.Style>
             </Image>
             <Slider x:Name="slVolume" VerticalAlignment="Center" IsEnabled="True" Grid.Column="1" Width="150" ValueChanged="slVolume_ValueChanged" HorizontalAlignment="Left"/>
+
+            <Button Grid.Column="3" Content="CH-" Background="Transparent" Style="{DynamicResource RoundCorner}" Height="25" Width="60" FontSize="16" FontFamily="Schadow BT" Click="btnChannelDown_Click"/>
+            <Button Grid.Column="4" Content="CH+" Background="Transparent" Style="{DynamicResource RoundCorner}" Height="25" Width="60" FontSize="16" FontFamily="Schadow BT" Click="btnChannelUp_Click"/>
+            
+            <Button Grid.Column="6" Background="Transparent" Style="{DynamicResource RoundCorner}" Height="25" Width="70" Click="btnOn_Click">
+                <Image Source="img/onoff.png" Width="40"/>
+            </Button>
         </Grid>
         <Rectangle Grid.Column="0" Fill="Transparent" Stroke="Black" StrokeThickness="1" Grid.RowSpan="2" Panel.ZIndex="-1"/>
         <Rectangle Grid.Column="1" Grid.Row="1" Fill="Transparent" Stroke="Black" StrokeThickness="1"/>
